# Skynet

./: .gitignore  .skynet-config.json  AGENT.md  README.md  brain.bat  migrate.py  project-brain-spec.docx  project-brain-windows-setup.docx  pyproject.toml
brain/: config.py  db.py  models.py  schema.sql
cli/: __main__.py  brain_init.py
server/: __init__.py  mcp_server.py  rest_api.py
tests/: conftest.py  test_api.py  test_db.py  test_mcp.py
