[project]
name = "project-brain"
version = "1.0.0"
description = "MCP server with SQLite for persistent AI agent memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["brain*", "server*", "cli*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
brain-init = "cli.brain_init:main"
